--- a/QuickNotes/css/reset.css
+++ b/QuickNotes/css/reset.css
@@ -1,3 +1,13 @@
-body,h1 {
+body,h1, p {
     margin: 0;
+    }
+
+body {
+    font-family: 'Anton', sans-serif;
 }
+
+p {
+    text-indent: 20px;
+    text-align: justify;
+    font-family: Arial, Helvetica, sans-serif;
+ }
